<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shareburst.GroupActivity" >

    <item
        android:id="@+id/action_edit"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/action_edit"/>
    
    <item android:id="@+id/action_discard"
          android:icon="@drawable/ic_action_discard"
          android:title="@string/action_discard"
          android:showAsAction="always" />
    
    <item
        android:id="@+id/action_edit_account"
        android:showAsAction="never"
        android:title="@string/action_edit_account"/>
    
    <item
        android:id="@+id/action_logout"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>
