<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shareburst.MainActivity"
    tools:ignore="MergeRootFrame">

    <RelativeLayout
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="369dp" >
        
        <TextView 
            android:id="@+id/title"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerHorizontal="true"
        	android:layout_centerVertical="true"
            />

        <Button
            android:id="@+id/prefs_button"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="loadPrefsActivity"
            android:text="@string/set_preferences"
            android:layout_below="@id/title"
            />
        
        <Button
            android:id="@+id/group_button"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="loadPrefsActivity"
            android:text="@string/create_group"
            android:layout_below="@id/prefs_button"
            />
    </RelativeLayout>

</FrameLayout>
